<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/sharp_search_24"
        android:title="@string/action_search"
        app:showAsAction="always|collapseActionView"
        android:imeOptions="actionSearch"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_add_new"
        android:icon="@drawable/sharp_add_24"
        android:title="@string/action_add_new"
        app:showAsAction="always" />

    <item
        android:id="@+id/main_menu_add_test_data"
        android:title="@string/main_menu_add_test_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_settings"
        android:title="@string/main_menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_help"
        android:title="@string/main_menu_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_about"
        android:title="@string/main_menu_about"
        app:showAsAction="never" />

</menu>