<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/input_years"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_shape"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/hint_years"/>

    <TextView
        android:id="@+id/hint_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/years"
        android:textSize="16sp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toEndOf="@id/input_years"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/input_months"/>

    <EditText
        android:id="@+id/input_months"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_shape"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/hint_years"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/hint_months"/>

    <TextView
        android:id="@+id/hint_months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/months"
        android:textSize="16sp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toEndOf="@id/input_months"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/input_days"/>

    <EditText
        android:id="@+id/input_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_shape"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/hint_months"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/hint_days"/>

    <TextView
        android:id="@+id/hint_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:textSize="16sp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toEndOf="@id/input_days"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>